template_css_variable

--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
+    <title>bli med</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
   </head>
   <body>
+    <header>
     <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+      <ul>
+        <li>x</li>
+        <li>x</li>
+        <li>x</li>
+      </ul>
     </nav>
+    </header>
     <main>
-      <h1>Home page</h1>
+      <section>
+        <div class="blimedcard">
+          <h2>bli med</h2>
+          <p>trykk på knappen under</p>
+          <button>bli med</button>
+        </div>
+      </section>
+      
     </main>
+
+    <footer>mader by B</footer>
+    
   </body>
 </html>
