more css n html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
           <button>bli med</button>
         </div>
       </section>
+
+      <section class="section spaceEvenly">
+        <div>
+          <h2>overskrift</h2>
+          <p>lorem ipsum text</p>
+        </div>
+   
+        <div>
+          <h2>overskrift</h2>
+          <p>lorem ipsum text</p>
+        </div>
+      </section>
       
     </main>
 
